--- a/Assets/Behaviors/Imitation.yaml
+++ b/Assets/Behaviors/Imitation.yaml
@@ -2,33 +2,108 @@ behaviors:
   MarioAgent:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 32
-      buffer_size: 2048
+      batch_size: 64
+      buffer_size: 8192
       learning_rate: 0.0003
       beta: 0.005
-      epsilon: 0.1
-      lambd: 0.95
+      epsilon: 0.3
+      lambd: 0.99
       num_epoch: 3
       learning_rate_schedule: linear
     network_settings:
-      normalize: true
-      hidden_units: 128
+      normalize: false
+      hidden_units: 256
       num_layers: 2
     reward_signals:
       extrinsic:
-        gamma: 0.9
-        strength: 0.3
+        gamma: 0.99
+        strength: 1
       gail:
-        gamma: 0.9
+        # gamma: 0.9
         strength: .5
         demo_path: Assets/Demonstrations/MarioDemo.demo
     behavioral_cloning:
-      gamma: 0.99
-      strength: 1
+      # gamma: 0.99
+      strength: 0.5
       demo_path: Assets/Demonstrations/MarioDemo.demo
-    keep_checkpoints: 5
-    max_steps: 1000000
+    keep_checkpoints: 10
+    max_steps: 2000000
     time_horizon: 64
     summary_freq: 20000
-    checkpoint_interval: 50000
+    checkpoint_interval: 100000
     threaded: true
+environment_parameters:
+  block_offset:
+    curriculum:
+      - name: Lesson0 # This is the start of the second lesson
+        completion_criteria:
+          measure: reward
+          behavior: AdvancedCollector
+          signal_smoothing: true
+          min_lesson_length: 100
+          threshold: 1.5
+        value:
+          sampler_type: uniform
+          sampler_parameters:
+            min_value: 0.0
+            max_value: 1.0
+        - name: Lesson0 # This is the start of the second lesson
+        completion_criteria:
+          measure: reward
+          behavior: AdvancedCollector
+          signal_smoothing: true
+          min_lesson_length: 100
+          threshold: 1.5
+        value:
+          sampler_type: uniform
+          sampler_parameters:
+            min_value: 0.0
+            max_value: 2.0
+        - name: Lesson1
+        completion_criteria:
+          measure: reward
+          behavior: AdvancedCollector
+          signal_smoothing: true
+          min_lesson_length: 100
+          threshold: 1.7
+        value:
+          sampler_type: uniform
+          sampler_parameters:
+            min_value: 1.0
+            max_value: 3.0
+        - name: Lesson2
+        completion_criteria:
+          measure: reward
+          behavior: AdvancedCollector
+          signal_smoothing: true
+          min_lesson_length: 100
+          threshold: 1.8
+        value:
+          sampler_type: uniform
+          sampler_parameters:
+            min_value: 2.0
+            max_value: 5.0
+        - name: Lesson3
+        completion_criteria:
+          measure: reward
+          behavior: AdvancedCollector
+          signal_smoothing: true
+          min_lesson_length: 100
+          threshold: 1.9
+        value:
+          sampler_type: uniform
+          sampler_parameters:
+            min_value: 3.0
+            max_value: 5.0
+        - name: Lesson4
+        completion_criteria:
+          measure: reward
+          behavior: AdvancedCollector
+          signal_smoothing: true
+          min_lesson_length: 100
+          threshold: 1.9
+        value:
+          sampler_type: uniform
+          sampler_parameters:
+            min_value: 5.0
+            max_value: 5.0
