--- a/Assets/Behaviors/Reinforcement.yaml
+++ b/Assets/Behaviors/Reinforcement.yaml
@@ -1,116 +1,34 @@
+# Reinforcement Learning for second level after training on imitation
 behaviors:
   MarioAgent:
-    # init_path: C:\Users\alecp\Unity Projects\Mario AI\results\reinforcementLL\MarioAgent\MarioAgent-999969.pt # temp resume from checkpoint
     trainer_type: ppo
     hyperparameters:
-      batch_size: 64
-      buffer_size: 8192
-      learning_rate: 0.0003
-      beta: 0.005
-      epsilon: 0.3
-      lambd: 0.99
-      num_epoch: 3
+      batch_size: 256
+      buffer_size: 1024
+      learning_rate: 0.001
+      beta: 0.0005
+      epsilon: 0.2
+      lambd: 0.95
+      num_epoch: 5
       learning_rate_schedule: linear
     network_settings:
-      normalize: true
-      hidden_units: 256
-      num_layers: 2
-      vis_encoder_type: simple
+      normalize: false
+      hidden_units: 512
+      num_layers: 3
     reward_signals:
       extrinsic:
         gamma: 0.995
-        strength: 1
-    keep_checkpoints: 20
-    max_steps: 5000000
-    time_horizon: 64
-    summary_freq: 20000
-    checkpoint_interval: 500000
+        strength: 0.8 # Increased impact of extrinsic reward to allow for reinforcement learning
+      gail:
+        strength: 0.2 # Decreased impact of GAIL in order to allow more room for reinforcement learning
+        gamma: 0.995
+        demo_path: Assets/Demonstrations/MarioDemo.demo
+    behavioral_cloning:
+      strength: 0.1 # Reduced impact of behavioral cloning
+      gamma: 0.995
+      demo_path: Assets/Demonstrations/MarioDemo.demo
+    keep_checkpoints: 5
+    max_steps: 5000000 # Increased max steps by 10x to account for the additional training
+    time_horizon: 256
+    summary_freq: 50000
     threaded: true
-environment_parameters:
-  enabled_items:
-    curriculum:
-    - name: Lesson0 # This is the start of the second lesson
-      completion_criteria:
-        measure: reward
-        behavior: MarioAgent
-        signal_smoothing: true
-        min_lesson_length: 100
-        threshold: 1.2
-      value:
-        sampler_type: uniform
-        sampler_parameters:
-          min_value: 0.0
-          max_value: 1.0
-    - name: Lesson1
-      completion_criteria:
-        measure: reward
-        behavior: MarioAgent
-        signal_smoothing: true
-        min_lesson_length: 250
-        threshold: 1.2
-      value:
-        sampler_type: uniform
-        sampler_parameters:
-          min_value: 0.0
-          max_value: 2.0
-    - name: Lesson2
-      completion_criteria:
-        measure: reward
-        behavior: MarioAgent
-        signal_smoothing: true
-        min_lesson_length: 250
-        threshold: 1.2
-      value:
-        sampler_type: uniform
-        sampler_parameters:
-          min_value: 1.0
-          max_value: 3.0
-    - name: Lesson3
-      completion_criteria:
-        measure: reward
-        behavior: MarioAgent
-        signal_smoothing: true
-        min_lesson_length: 100
-        threshold: 1.1
-      value:
-        sampler_type: uniform
-        sampler_parameters:
-          min_value: 2.0
-          max_value: 5.0
-    - name: Lesson4
-      completion_criteria:
-        measure: reward
-        behavior: MarioAgent
-        signal_smoothing: true
-        min_lesson_length: 100
-        threshold: 1.3
-      value:
-        sampler_type: uniform
-        sampler_parameters:
-          min_value: 3.0
-          max_value: 5.0
-    - name: Lesson5
-      completion_criteria:
-        measure: reward
-        behavior: MarioAgent
-        signal_smoothing: true
-        min_lesson_length: 100
-        threshold: 1.1
-      value:
-        sampler_type: uniform
-        sampler_parameters:
-          min_value: 5.0
-          max_value: 5.0
-    - name: Lesson6
-      completion_criteria:
-        measure: reward
-        behavior: MarioAgent
-        signal_smoothing: true
-        min_lesson_length: 100
-        threshold: 1.2
-      value:
-        sampler_type: uniform
-        sampler_parameters:
-          min_value: 6
-          max_value: 6
-    #mlagents-learn Assets\Behaviors\Reinforcement.yaml --run-id=curriculum1 --resume
